# technitium-connector

./: .flake8  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  technitium-connector.service
.github/workflows/: main.yaml
src/: .env.template  main.py  manage-dns.py  service.py  technitium.py
